--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@
                 <li><a href="#">Текущие события</a></li>
                 <li><a href="#">Пожертвовать</a></li>
             </ol>
+            <ol>
+                <li><a href="#">Заглавная страница</a></li>
+                <li><a href="#">Содержание</a></li>
+                <li><a href="#">Избранные статьи</a></li>
+                <li><a href="#">Случайная статья</a></li>
+                <li><a href="#">Текущие события</a></li>
+                <li><a href="#">Пожертвовать</a></li>
+            </ol>
+            <ol>
+                <li><a href="#">Заглавная страница</a></li>
+                <li><a href="#">Содержание</a></li>
+                <li><a href="#">Избранные статьи</a></li>
+                <li><a href="#">Случайная статья</a></li>
+                <li><a href="#">Текущие события</a></li>
+                <li><a href="#">Пожертвовать</a></li>
+            </ol>
 
         </div>
         <div class="section">
