--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="static/styles/style.css" />
+    <title>Wiki html</title>
+    <link rel="stylesheet" href="static/styles/style.css">
+    <link rel="icon" href="/static/styles/wikipedia.png">
     <style>
         a {
             text-decoration: none;
